Fix horizontal scroll

--- a/assets/themes/bbrks.me/css/style.css
+++ b/assets/themes/bbrks.me/css/style.css
@@ -240,6 +240,7 @@ ol li p {
 	text-align: center;
 	color: #ccc;
 	margin-bottom: 2em;
+	overflow: hidden;
 }
 
 /* end footer */
